force-app/main/default/objects/sked__Job_Allocation__c/sked__Job_Allocation__c.object-meta.xml
<CustomObject>
    <label>Job Allocation</label>
    <nameField>
        <displayFormat>JA-{0}</displayFormat>
        <label>Job Allocation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>