force-app/main/default/objects/sked__Job_Allocation__c/fields/JA_Created_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>JA_Created_Date_Time__c</fullName>
    <description>HRP-12487- Need Created Date Time field for Report</description>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>JA Created Date</label>
    <type>DateTime</type>
</CustomField>