force-app/main/default/objects/sked__Job_Allocation__c/fields/JA_Last_Modified_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>JA_Last_Modified_Date_Time__c</fullName>
    <description>HRP-12487- Need Last Modified Date Time field for Report</description>
    <formula>LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>JA Last Modified Date</label>
    <type>DateTime</type>
</CustomField>