force-app/main/default/objects/sked__Job_Allocation__c/fields/sked__Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>sked__Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To</label>
    <referenceTo>sked__Resource__c</referenceTo>
    <relationshipLabel>Assigned Assets</relationshipLabel>
    <relationshipName>Assigned_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>