force-app/main/default/objects/sked__Job_Allocation__c/fields/sked__Decline_Description__c.field-meta.xml
<CustomField>
    <fullName>sked__Decline_Description__c</fullName>
    <label>Decline Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>