force-app/main/default/objects/sked__Job_Allocation__c/fields/sked__Decline_Reason__c.field-meta.xml
<CustomField>
    <fullName>sked__Decline_Reason__c</fullName>
    <label>Decline Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sick</fullName>
            </value>
            <value>
                <fullName>OnLeave</fullName>
            </value>
            <value>
                <fullName>Conflict</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>