force-app/main/default/objects/sked__Job_Allocation__c/fields/sked__End1__c.field-meta.xml
<CustomField>
    <fullName>sked__End1__c</fullName>
    <formula>sked__Start__c  +  sked__Duration__c  / 1440</formula>
    <label>End</label>
    <type>DateTime</type>
</CustomField>