force-app/main/default/objects/sked__Job_Allocation__c/fields/sked__Estimated_Travel_Distance__c.field-meta.xml
<CustomField>
    <fullName>sked__Estimated_Travel_Distance__c</fullName>
    <label>Estimated Travel Distance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>