force-app/main/default/objects/sked__Job_Allocation__c/fields/sked__Estimated_Travel_Time__c.field-meta.xml
<CustomField>
    <fullName>sked__Estimated_Travel_Time__c</fullName>
    <inlineHelpText>Estimated travel time to this job, from the resources previous location, in minutes.</inlineHelpText>
    <label>Estimated Travel Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>