force-app/main/default/objects/sked__Job_Allocation__c/fields/sked__GeoLocation_Checked_In__c.field-meta.xml
<CustomField>
    <fullName>sked__GeoLocation_Checked_In__c</fullName>
    <label>GeoLocation Checked In</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>