force-app/main/default/objects/sked__Job_Allocation__c/fields/sked__GeoLocation_In_Progress__c.field-meta.xml
<CustomField>
    <fullName>sked__GeoLocation_In_Progress__c</fullName>
    <label>GeoLocation In Progress</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>