force-app/main/default/objects/sked__Job_Allocation__c/fields/sked__GeoLocation_Start_Travel__c.field-meta.xml
<CustomField>
    <fullName>sked__GeoLocation_Start_Travel__c</fullName>
    <label>GeoLocation Start Travel</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>