force-app/main/default/objects/sked__Job_Allocation__c/fields/sked__Hours__c.field-meta.xml
<CustomField>
    <fullName>sked__Hours__c</fullName>
    <description>hours allocated to this job</description>
    <label>Hours</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>