force-app/main/default/objects/sked__Job_Allocation__c/fields/sked__Job__c.field-meta.xml
<CustomField>
    <fullName>sked__Job__c</fullName>
    <label>Job</label>
    <referenceTo>sked__Job__c</referenceTo>
    <relationshipLabel>Job Allocations</relationshipLabel>
    <relationshipName>Job_Allocations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>