force-app/main/default/objects/sked__Job_Allocation__c/fields/sked__Notification_Type__c.field-meta.xml
<CustomField>
    <fullName>sked__Notification_Type__c</fullName>
    <label>Notification Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>push</fullName>
            </value>
            <value>
                <fullName>sms</fullName>
            </value>
            <value>
                <fullName>other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>