force-app/main/default/objects/sked__Job_Allocation__c/fields/sked__Phone_Response__c.field-meta.xml
<CustomField>
    <fullName>sked__Phone_Response__c</fullName>
    <description>Capture the response of the resource for manual job allocation by phone</description>
    <label>Phone Response</label>
    <type>TextArea</type>
</CustomField>