force-app/main/default/objects/sked__Job_Allocation__c/fields/sked__Resource_Requirement__c.field-meta.xml
<CustomField>
    <fullName>sked__Resource_Requirement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource Requirement</label>
    <referenceTo>sked__Resource_Requirement__c</referenceTo>
    <relationshipLabel>Job Allocations</relationshipLabel>
    <relationshipName>Job_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>