force-app/main/default/objects/sked__Job_Allocation__c/fields/sked__Set_End__c.field-meta.xml
<CustomField>
    <fullName>sked__Set_End__c</fullName>
    <description>An editable version of the End field. This may be null for historical records. For new records, there are triggers in place to ensure that this will always have the same value as the formula End field.</description>
    <label>Set End</label>
    <type>DateTime</type>
</CustomField>