force-app/main/default/objects/sked__Job_Allocation__c/fields/sked__Team_Leader__c.field-meta.xml
<CustomField>
    <fullName>sked__Team_Leader__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the Resource attached to the Job Allocation a team leader on the job</description>
    <inlineHelpText>Is the Resource attached to the Job Allocation a team leader on the job</inlineHelpText>
    <label>Team Leader</label>
    <type>Checkbox</type>
</CustomField>