force-app/main/default/objects/sked__Job_Allocation__c/fields/sked__Time_Checked_In__c.field-meta.xml
<CustomField>
    <fullName>sked__Time_Checked_In__c</fullName>
    <label>Time Checked In</label>
    <type>DateTime</type>
</CustomField>