force-app/main/default/objects/sked__Job_Allocation__c/fields/sked__Time_Completed__c.field-meta.xml
<CustomField>
    <fullName>sked__Time_Completed__c</fullName>
    <label>Time Completed</label>
    <type>DateTime</type>
</CustomField>