force-app/main/default/objects/sked__Job_Allocation__c/fields/sked__Time_In_Progress__c.field-meta.xml
<CustomField>
    <fullName>sked__Time_In_Progress__c</fullName>
    <description>Time user progressed status to &quot;In Progress&quot;</description>
    <inlineHelpText>Time user progressed status to &quot;In Progress&quot;</inlineHelpText>
    <label>Time In Progress</label>
    <type>DateTime</type>
</CustomField>