force-app/main/default/objects/sked__Job_Allocation__c/fields/sked__Time_Published__c.field-meta.xml
<CustomField>
    <fullName>sked__Time_Published__c</fullName>
    <label>Time Published</label>
    <type>DateTime</type>
</CustomField>