force-app/main/default/objects/sked__Job_Allocation__c/fields/sked__Time_Responded__c.field-meta.xml
<CustomField>
    <fullName>sked__Time_Responded__c</fullName>
    <label>Time Responded</label>
    <type>DateTime</type>
</CustomField>