force-app/main/default/objects/sked__Job_Allocation__c/fields/sked__Time_Start_Travel__c.field-meta.xml
<CustomField>
    <fullName>sked__Time_Start_Travel__c</fullName>
    <label>Time Start Travel</label>
    <type>DateTime</type>
</CustomField>