force-app/main/default/objects/sked__Job_Allocation__c/fields/sked__Travel_Time__c.field-meta.xml
<CustomField>
    <fullName>sked__Travel_Time__c</fullName>
    <description>Travel time for this job in minutes.</description>
    <label>Travel Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>