force-app/main/default/objects/sked__Job_Allocation__c/fields/sked__UniqueKey__c.field-meta.xml
<CustomField>
    <fullName>sked__UniqueKey__c</fullName>
    <description>Unique key comprised of the jobId and the resourceId if the status is not deleted. Will be populated by the trigger</description>
    <label>UniqueKey</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>