force-app/main/default/objects/sked__Job_Allocation__c/fields/sked_Additional_Roles__c.field-meta.xml
<CustomField>
    <fullName>sked_Additional_Roles__c</fullName>
    <label>Additional Roles</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>sked_Resource_Roles</valueSetName>
    </valueSet>
</CustomField>