force-app/main/default/objects/sked__Job_Allocation__c/fields/sked_API_Error__c.field-meta.xml
<CustomField>
    <fullName>sked_API_Error__c</fullName>
    <defaultValue>false</defaultValue>
    <label>API Error</label>
    <type>Checkbox</type>
</CustomField>