force-app/main/default/objects/sked__Job_Allocation__c/fields/sked_Call_Out_Notice__c.field-meta.xml
<CustomField>
    <fullName>sked_Call_Out_Notice__c</fullName>
    <label>Call Out Notice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>