force-app/main/default/objects/sked__Job_Allocation__c/fields/sked_Call_Out_Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>sked_Call_Out_Reason_Code__c</fullName>
    <label>Call Out Reason Code</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>sked_Call_Out_Type__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Management Decision</fullName>
            </value>
            <value>
                <fullName>Personal</fullName>
            </value>
            <value>
                <fullName>Turnaround Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>