force-app/main/default/objects/sked__Job_Allocation__c/fields/sked_CDL__c.field-meta.xml
<CustomField>
    <fullName>sked_CDL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CDL</label>
    <type>Checkbox</type>
</CustomField>