force-app/main/default/objects/sked__Job_Allocation__c/fields/sked_Completed_Post_Processes__c.field-meta.xml
<CustomField>
    <fullName>sked_Completed_Post_Processes__c</fullName>
    <label>Completed Post Processes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Travel Time</fullName>
            </value>
            <value>
                <fullName>Main Process</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>