force-app/main/default/objects/sked__Job_Allocation__c/fields/sked_Created_From_Operation_Record__c.field-meta.xml
<CustomField>
    <fullName>sked_Created_From_Operation_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created From Operation Record</label>
    <type>Checkbox</type>
</CustomField>