force-app/main/default/objects/sked__Job_Allocation__c/fields/sked_Date_Call_Out_Received__c.field-meta.xml
<CustomField>
    <fullName>sked_Date_Call_Out_Received__c</fullName>
    <label>Date Call Out Received</label>
    <type>Date</type>
</CustomField>