force-app/main/default/objects/sked__Job_Allocation__c/fields/sked_Date_of_Call_Out__c.field-meta.xml
<CustomField>
    <fullName>sked_Date_of_Call_Out__c</fullName>
    <label>Date Call Out Submitted</label>
    <type>Date</type>
</CustomField>