force-app/main/default/objects/sked__Job_Allocation__c/fields/sked_DateTime_of_Call_Out__c.field-meta.xml
<CustomField>
    <fullName>sked_DateTime_of_Call_Out__c</fullName>
    <label>DateTime of Call Out</label>
    <type>DateTime</type>
</CustomField>