force-app/main/default/objects/sked__Job_Allocation__c/fields/sked_DOT__c.field-meta.xml
<CustomField>
    <fullName>sked_DOT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DOT</label>
    <type>Checkbox</type>
</CustomField>