force-app/main/default/objects/sked__Job_Allocation__c/fields/sked_Drive_Date_Text__c.field-meta.xml
<CustomField>
    <fullName>sked_Drive_Date_Text__c</fullName>
    <formula>sked__Job__r.sked_Drive__r.sked_Drive_Date_Text__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Drive Date Text</label>
    <type>Text</type>
</CustomField>