force-app/main/default/objects/sked__Job_Allocation__c/fields/sked_Drive_Name__c.field-meta.xml
<CustomField>
    <fullName>sked_Drive_Name__c</fullName>
    <formula>sked__Job__r.sked_Drive__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Drive Name</label>
    <type>Text</type>
</CustomField>