force-app/main/default/objects/sked__Job_Allocation__c/fields/sked_Drive_Shift_Trade__c.field-meta.xml
<CustomField>
    <fullName>sked_Drive_Shift_Trade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Drive Shift Trade</label>
    <referenceTo>sked_Drive_Shift_Trade__c</referenceTo>
    <relationshipLabel>Job Allocations</relationshipLabel>
    <relationshipName>sked_Job_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>