force-app/main/default/objects/sked__Job_Allocation__c/fields/sked_Dual_Role__c.field-meta.xml
<CustomField>
    <fullName>sked_Dual_Role__c</fullName>
    <formula>TEXT(sked__Job__r.sked_Dual_Role__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dual Role</label>
    <type>Text</type>
</CustomField>