force-app/main/default/objects/sked__Job_Allocation__c/fields/sked_Duration_with_Travel_Time__c.field-meta.xml
<CustomField>
    <fullName>sked_Duration_with_Travel_Time__c</fullName>
    <formula>sked__Duration__c +  sked__Estimated_Travel_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration with Travel Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>