force-app/main/default/objects/sked__Job_Allocation__c/fields/sked_Exclude_TAT_Exception__c.field-meta.xml
<CustomField>
    <fullName>sked_Exclude_TAT_Exception__c</fullName>
    <formula>sked_Drive_Shift_Trade__c != NULL
&amp;&amp; (sked_Drive_Shift_Trade__r.sked_TAT_Time_Traded_Into_Requester__c || sked_Drive_Shift_Trade__r.sked_TAT_Time_Traded_Into_Trading__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exclude TAT Exception</label>
    <type>Checkbox</type>
</CustomField>