force-app/main/default/objects/sked__Job_Allocation__c/fields/sked_Geoservice_Travel_Distance_Back__c.field-meta.xml
<CustomField>
    <fullName>sked_Geoservice_Travel_Distance_Back__c</fullName>
    <label>Geoservice Travel Distance Back</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>