force-app/main/default/objects/sked__Job_Allocation__c/fields/sked_Geoservice_Travel_Time__c.field-meta.xml
<CustomField>
    <fullName>sked_Geoservice_Travel_Time__c</fullName>
    <label>Geoservice Travel Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>