force-app/main/default/objects/sked__Job_Allocation__c/fields/sked_Guarded__c.field-meta.xml
<CustomField>
    <fullName>sked_Guarded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Guarded</label>
    <type>Checkbox</type>
</CustomField>