force-app/main/default/objects/sked__Job_Allocation__c/fields/sked_Is_Handled_Exception_from_Client__c.field-meta.xml
<CustomField>
    <fullName>sked_Is_Handled_Exception_from_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Handled Exception from Client</label>
    <type>Checkbox</type>
</CustomField>