force-app/main/default/objects/sked__Job_Allocation__c/fields/sked_Is_Locked__c.field-meta.xml
<CustomField>
    <fullName>sked_Is_Locked__c</fullName>
    <formula>sked_Locked__c || sked_Guarded__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Locked</label>
    <type>Checkbox</type>
</CustomField>