force-app/main/default/objects/sked__Job_Allocation__c/fields/sked_Is_Relocated_Resource__c.field-meta.xml
<CustomField>
    <fullName>sked_Is_Relocated_Resource__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Relocated Resource</label>
    <type>Checkbox</type>
</CustomField>