force-app/main/default/objects/sked__Job_Allocation__c/fields/sked_Job_Timezone__c.field-meta.xml
<CustomField>
    <fullName>sked_Job_Timezone__c</fullName>
    <formula>sked__Job__r.sked__Timezone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Timezone</label>
    <type>Text</type>
</CustomField>