force-app/main/default/objects/sked__Job_Allocation__c/fields/sked_Optimization_Run__c.field-meta.xml
<CustomField>
    <fullName>sked_Optimization_Run__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Optimization Run</label>
    <referenceTo>sked_Optimization_Run__c</referenceTo>
    <relationshipLabel>Job Allocations</relationshipLabel>
    <relationshipName>sked_Job_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>