force-app/main/default/objects/sked__Job_Allocation__c/fields/sked_Premium_Pay__c.field-meta.xml
<CustomField>
    <fullName>sked_Premium_Pay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Premium Pay</label>
    <type>Checkbox</type>
</CustomField>