force-app/main/default/objects/sked__Job_Allocation__c/fields/sked_Replacement_For__c.field-meta.xml
<CustomField>
    <fullName>sked_Replacement_For__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Replacement For</label>
    <referenceTo>sked__Job_Allocation__c</referenceTo>
    <relationshipLabel>Job Allocations</relationshipLabel>
    <relationshipName>sked_Replacements</relationshipName>
    <type>Lookup</type>
</CustomField>