force-app/main/default/objects/sked__Job_Allocation__c/fields/sked_Roles_Assignment_Str__c.field-meta.xml
<CustomField>
    <fullName>sked_Roles_Assignment_Str__c</fullName>
    <label>Roles Assignment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>