force-app/main/default/objects/sked__Job_Allocation__c/fields/sked_Set_End_Date__c.field-meta.xml
<CustomField>
    <fullName>sked_Set_End_Date__c</fullName>
    <label>Set End Date</label>
    <type>Date</type>
</CustomField>