force-app/main/default/objects/sked__Job_Allocation__c/fields/sked_Set_End_Time__c.field-meta.xml
<CustomField>
    <fullName>sked_Set_End_Time__c</fullName>
    <label>Set End Time</label>
    <type>Time</type>
</CustomField>