force-app/main/default/objects/sked__Job_Allocation__c/fields/sked_Staffing_Reason__c.field-meta.xml
<CustomField>
    <fullName>sked_Staffing_Reason__c</fullName>
    <label>Staffing Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>sked_Staffing_Reasons</valueSetName>
    </valueSet>
</CustomField>