force-app/main/default/objects/sked__Job_Allocation__c/fields/sked_Start_with_Travel_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>sked_Start_with_Travel_Start_Date__c</fullName>
    <label>Start with Travel Start Date</label>
    <type>Date</type>
</CustomField>