force-app/main/default/objects/sked__Job_Allocation__c/fields/sked_Start_With_Travel_Time__c.field-meta.xml
<CustomField>
    <fullName>sked_Start_With_Travel_Time__c</fullName>
    <label>Start With Travel Time</label>
    <type>DateTime</type>
</CustomField>