force-app/main/default/objects/sked__Job_Allocation__c/fields/sked_Time_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>sked_Time_Cancelled__c</fullName>
    <label>Time Cancelled</label>
    <type>DateTime</type>
</CustomField>