force-app/main/default/objects/sked__Job_Allocation__c/fields/sked_Time_Checked_In_Date__c.field-meta.xml
<CustomField>
    <fullName>sked_Time_Checked_In_Date__c</fullName>
    <label>Time Checked In Date</label>
    <type>Date</type>
</CustomField>