force-app/main/default/objects/sked__Job_Allocation__c/fields/sked_Time_In_Progress_Time__c.field-meta.xml
<CustomField>
    <fullName>sked_Time_In_Progress_Time__c</fullName>
    <label>Time In Progress Time</label>
    <type>Time</type>
</CustomField>