force-app/main/default/objects/sked__Job_Allocation__c/fields/sked_Time_Published_Date__c.field-meta.xml
<CustomField>
    <fullName>sked_Time_Published_Date__c</fullName>
    <label>Time Published Date</label>
    <type>Date</type>
</CustomField>