force-app/main/default/objects/sked__Job_Allocation__c/fields/sked_Travel_Time_To__c.field-meta.xml
<CustomField>
    <fullName>sked_Travel_Time_To__c</fullName>
    <label>Travel Time  To</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>