force-app/main/default/objects/sked__Job_Allocation__c/validationRules/sked__EndTimeNotAfterJobFinish.validationRule-meta.xml
<ValidationRule>
    <fullName>sked__EndTimeNotAfterJobFinish</fullName>
    <active>false</active>
    <errorConditionFormula>AND( NOT( ISNULL( sked__End1__c ) ) , NOT( ISNULL( sked__Job__r.sked__Finish__c ) ), NOT( ISPICKVAL( sked__Status__c , &#39;Deleted&#39; ) ), NOT( ISPICKVAL( sked__Status__c , &#39;Declined&#39; ) ), sked__End1__c &gt; sked__Job__r.sked__Finish__c )</errorConditionFormula>
    <errorMessage>job allocation end time cannot be after job end time</errorMessage>
</ValidationRule>