force-app/main/default/objects/sked__Job_Allocation__c/validationRules/sked__StartTimeNotBeforeJobStart.validationRule-meta.xml
<ValidationRule>
    <fullName>sked__StartTimeNotBeforeJobStart</fullName>
    <active>false</active>
    <errorConditionFormula>AND( NOT( ISNULL( sked__Start__c ) ) , NOT( ISNULL( sked__Job__r.sked__Start__c ) ), NOT( ISPICKVAL( sked__Status__c , &#39;Deleted&#39; ) ), NOT( ISPICKVAL( sked__Status__c , &#39;Declined&#39; ) ), sked__Start__c &lt; sked__Job__r.sked__Start__c )</errorConditionFormula>
    <errorMessage>job allocation start time cannot be before job start time</errorMessage>
</ValidationRule>