force-app/main/default/objects/sked__Job_Allocation__c/validationRules/sked__ValidateJobAllocationStatus.validationRule-meta.xml
<ValidationRule>
    <fullName>sked__ValidateJobAllocationStatus</fullName>
    <active>true</active>
    <errorConditionFormula>NOT( ISPICKVAL( sked__Status__c , &#39;Pending Dispatch&#39;) || ISPICKVAL( sked__Status__c , &#39;Dispatched&#39;) || ISPICKVAL( sked__Status__c , &#39;Confirmed&#39;) || ISPICKVAL( sked__Status__c , &#39;En Route&#39;) || ISPICKVAL( sked__Status__c , &#39;Checked In&#39;) || ISPICKVAL( sked__Status__c , &#39;In Progress&#39;) || ISPICKVAL( sked__Status__c , &#39;Complete&#39;) || ISPICKVAL( sked__Status__c , &#39;Declined&#39;) || ISPICKVAL( sked__Status__c , &#39;Deleted&#39;) )</errorConditionFormula>
    <errorDisplayField>sked__Status__c</errorDisplayField>
    <errorMessage>Invalid Job Allocation Status</errorMessage>
</ValidationRule>